Done newtab Chorme with background and yourname

--- a/newtab.html
+++ b/newtab.html
@@ -8,7 +8,7 @@
     <div class="top">
           <div class="left">
             <div>
-              Interest: <span class="interest-text"></span>
+              Interest: <span class="interest-text">Da Lat</span>
             </div>
             <div>
               Photo by: <a class="photoby" href="https://www.facebook.com/mike.nguyen.549" target="_blank"><strong> Minh Nguyen </strong> </a>
@@ -19,8 +19,9 @@
           </div>
     </div>
       <h1 class="time">16:00</h1>
-      <h1 class="sizeFont">What's your name ?</h1>
+      <h1 class="sizeFont greeting">What's your name ?</h1>
       <input class="ipBeauti user-name" type="text" name=""/>
+      <a href="#" class="btnA newName">Choose a new your name</a>
     </div>
     <script
   src="https://code.jquery.com/jquery-3.4.1.slim.js"
