--- a/newtab.html
+++ b/newtab.html
@@ -11,7 +11,7 @@
               Interest: <span class="interest-text">Da Lat</span>
             </div>
             <div>
-              Photo by: <a class="photoby" href="https://www.facebook.com/mike.nguyen.549" target="_blank"><strong> Minh Nguyen </strong> </a>
+              Photo by: <a class="photoby" href="https://github.com/KhaMinhVLU-2017" target="_blank"><strong> Minh Nguyen </strong> </a>
             </div>
           </div>
           <div class="right">
